# platform.upstream.enlightenment

./: .cproject  .gbs.conf  .project  .tproject  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  diff.patch  enlightenment-0.16.999.77927.tar.gz.delta  enlightenment-0.16.999.77927.tar.gz.id  enlightenment-0.17.0-alpha.tar.bz2.delta  enlightenment-0.17.0-alpha.tar.bz2.id  enlightenment-0.17.0-alpha3.tar.bz2.delta  enlightenment-0.17.0-alpha3.tar.bz2.id  enlightenment-0.17.0-alpha5.tar.bz2.delta  enlightenment-0.17.0-alpha5.tar.bz2.id  enlightenment-0.17.0-alpha6.tar.bz2.delta  enlightenment-0.17.0-alpha6.tar.bz2.id  enlightenment-0.17.0-alpha7.tar.bz2.delta  enlightenment-0.17.0-alpha7.tar.bz2.id  enlightenment-0.17.0-beta.tar.bz2.delta  enlightenment-0.17.0-beta.tar.bz2.id  enlightenment-0.17.0-gamma.tar.bz2.delta  enlightenment-0.17.0-gamma.tar.bz2.id  enlightenment-0.17.0-lucky.tar.bz2.delta  enlightenment-0.17.0-lucky.tar.bz2.id  enlightenment-0.17.0.tar.bz2.delta  enlightenment-0.17.0.tar.bz2.id  enlightenment-0.17.1.tar.bz2.delta  enlightenment-0.17.1.tar.bz2.id  enlightenment-0.17.4.tar.gz.delta  enlightenment-0.17.4.tar.gz.id  enlightenment.pc  enlightenment.spec  patch.diff  project.config  ttt.sh
config/: Makefile.in  Makefile.mk
config/default/: Makefile.in  e.src
config/mobile/: Makefile.in  e.src
config/standard/: Makefile.in  e.src
config/tiling/: e.src
data/: Makefile.in  Makefile.mk
data/backgrounds/: Black_Screen.edj  Makefile.in  Makefile.mk
data/dbus/: Makefile.mk  org.enlightenment.wm.conf
data/desktop/: Makefile.in
data/etc/: Makefile.in  sysactions.conf
data/favorites/: Makefile.in
data/flags/: Makefile.in
data/icons/: Makefile.in
data/images/: Makefile.in
data/input_methods/: Makefile.in
data/themes/: Makefile.in
data/themes/edc/: deskmirror.edc
data/themes/images/: Makefile.in
data/tools/: Makefile.in
data/xsession/: Makefile.in
doc/: Makefile.in
packaging/: e17.service  enlightenment.changes  enlightenment.service  enlightenment.spec
po/: ar.gmo  ar.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  enlightenment.pot  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  fo.gmo  fo.po  fr.gmo  fr.po  fr_CH.gmo  fr_CH.po  gl.gmo  gl.po  he.gmo  he.po  hr.gmo  hr.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  (+41 more)
src/: Makefile.in  Makefile.mk
src/TC/: Makefile.mk  e_tc_main.c  e_tc_main.h  test_case_basic.c  test_case_basic.h  test_case_basic_stack.c  test_case_easy.c
src/modules/: Makefile.in  Makefile.mk  Makefile_access.mk  Makefile_bufferqueue.mk  Makefile_contact.mk  Makefile_e_comp_gestures.mk  Makefile_music_control.mk  Makefile_teamwork.mk  Makefile_wl_desktop_shell.mk  Makefile_wl_screenshot.mk
src/modules/access/: Makefile.in
src/modules/backlight/: Makefile.in
src/modules/battery/: Makefile.in
src/modules/bufferqueue/: bq_mgr.xml  bq_mgr_protocol.c  bq_mgr_protocol.h  e_mod_main.c  e_mod_main.h  es-share.xml  es_share_client_protocol.h  es_share_protocol.c  es_share_server_protocol.h
src/modules/clock/: Makefile.in
src/modules/comp/: Makefile.in
src/modules/conf/: Makefile.in
src/modules/conf_applications/: Makefile.in
src/modules/conf_dialogs/: Makefile.in
src/modules/conf_display/: Makefile.in
src/modules/conf_edgebindings/: Makefile.in
src/modules/conf_interaction/: Makefile.in
src/modules/conf_intl/: Makefile.in
src/modules/conf_keybindings/: Makefile.in
src/modules/conf_menus/: Makefile.in  e_int_config_menus.c
src/modules/conf_paths/: Makefile.in
src/modules/conf_performance/: Makefile.in
src/modules/conf_randr/: Makefile.in
src/modules/conf_shelves/: Makefile.in
src/modules/conf_theme/: Makefile.in
src/modules/conf_wallpaper2/: Makefile.in
src/modules/conf_window_manipulation/: Makefile.in
src/modules/conf_window_remembers/: Makefile.in
src/modules/connman/: Makefile.in
src/modules/cpufreq/: Makefile.in
src/modules/dropshadow/: Makefile.in
src/modules/e_comp_gestures/: e_mod_main.c
src/modules/everything/: Makefile.in  everything.pc
src/modules/fileman/: Makefile.in
src/modules/fileman_opinfo/: Makefile.in
src/modules/gadman/: Makefile.in
src/modules/ibar/: Makefile.in
src/modules/ibox/: Makefile.in
src/modules/illume-bluetooth/: Makefile.in
src/modules/illume-home/: Makefile.in
src/modules/illume-home-toggle/: Makefile.in
src/modules/illume-indicator/: Makefile.in
src/modules/illume-kbd-toggle/: Makefile.in
src/modules/illume-keyboard/: Makefile.in  e-module-illume-keyboard.edj
src/modules/illume-mode-toggle/: Makefile.in
src/modules/illume-softkey/: Makefile.in  e-module-illume-softkey.edj
src/modules/illume2/: Makefile.in
src/modules/lokker/: lokker.c
src/modules/mixer/: Makefile.in  emixer.c
src/modules/msgbus/: Makefile.in
src/modules/notification/: Makefile.in
src/modules/packagekit/: e_mod_packagekit.c  e_mod_packagekit.h
src/modules/pager/: Makefile.in
src/modules/physics/: Makefile.in
src/modules/policy_mobile/: e_mod_main.c
src/modules/quickaccess/: Makefile.in
src/modules/shot/: Makefile.in
src/modules/start/: Makefile.in
src/modules/syscon/: Makefile.in
src/modules/systray/: Makefile.in
src/modules/tasks/: Makefile.in
src/modules/teamwork/: e_mod_main.c
src/modules/temperature/: Makefile.in
src/modules/tiling/: Makefile.in  e-module-tiling.edj
src/modules/winlist/: Makefile.in
src/modules/wizard/: Makefile.in
src/modules/wl_desktop_shell/: .e_mod_main.c.swp  e_mod_input_panel.c  e_mod_main.c  e_mod_main.h  e_scaler.c  e_scaler.h  e_scaler_protocol.c  e_scaler_protocol.h  e_transient_for_protocol.c  e_transient_for_protocol.h  tizen_extension.xml  tizen_extension_protocol.c  tizen_extension_server_protocol.h  tizen_subsurface.xml  tizen_subsurface_protocol.c  tizen_subsurface_server_protocol.h  tizen_transient_for.xml  tizen_transient_for_protocol.c  tizen_transient_for_server_protocol.h
src/modules/wl_drm/: e_mod_main.c
src/modules/wl_screenshot/: e_mod_main.c  e_screenshooter_server.c  (+6 more)
(+13 files in other folders)
